--- a/Reborn/View/zh-Hans.lproj/LaunchScreen.strings
+++ b/Reborn/View/zh-Hans.lproj/LaunchScreen.strings
@@ -1,6 +1,6 @@
 
-/* Class = "UILabel"; text = "重启自律生活"; ObjectID = "T3a-lw-6aZ"; */
-"T3a-lw-6aZ.text" = "重启自律生活";
+/* Class = "UILabel"; text = "重启健康生活"; ObjectID = "T3a-lw-6aZ"; */
+"T3a-lw-6aZ.text" = "重启健康生活";
 
-/* Class = "UILabel"; text = "重生"; ObjectID = "wMY-G1-WgY"; */
-"wMY-G1-WgY.text" = "重生";
+/* Class = "UILabel"; text = "极简自律"; ObjectID = "wMY-G1-WgY"; */
+"wMY-G1-WgY.text" = "极简自律";
