--- a/Reborn/View/zh-Hans.lproj/Main.strings
+++ b/Reborn/View/zh-Hans.lproj/Main.strings
@@ -147,7 +147,7 @@
 "I5N-Yf-LFv.text" = "目标";
 
 /* Class = "UILabel"; text = "一月期会员"; ObjectID = "J3Q-Pd-5H5"; */
-"J3Q-Pd-5H5.text" = "一月期会员";
+"J3Q-Pd-5H5.text" = "一月期方案";
 
 /* Class = "UILabel"; text = "呼吸放松"; ObjectID = "JAt-Bl-84Q"; */
 "JAt-Bl-84Q.text" = "呼吸放松";
@@ -345,7 +345,7 @@
 "djk-JB-I2X.normalTitle" = "开始日";
 
 /* Class = "UITextView"; text = "用户隐私政策\n\n[极简自律] 关注并且尊重用户隐私，我们不会以任何方式收集您的个人数据，包括您的个人信息，使用记录，使用偏好，您在本地产生的数据将储存在您的设备。如果您删除习惯项目，项目相关数据将会在本地被删除，且无法恢复。如果您卸载App，所有数据将会被删除，且无法被恢复。\n\n用户使用条款\n\n[极简自律] 提供多种App内购方案，当您选择购买即视为您同意本条款\n\n- 会员服务\n\n[一月期会员] 和 [一年期会员] 属于自动订阅型会员，服务到期后将自动续费。[永久会员] 属于非消费型会员，您只能购买一次，且不会被自动续费。[能量] 属于消费型内购，您可以重复购买，且不会被自动续费。当您取消订阅或者申请了退款，所有的会员服务将会被锁定，但是您的项目数据不会被删除，当您恢复会员后，您可以重新享受会员服务\n\n- 购买规则\n\n当您订阅了 [一月期会员] 您可以升级到 [一年期会员]，Apple会按差价进行扣款，并且更新订阅期限。\n\n为了防止重复扣费，如果您订阅了 [一月期会员] 或 [一年期会员]，再您取消订阅前，您将暂时无法购买 [永久会员]。如果您购买了 [永久会员]，[一月期会员] 和 [一年期会员] 将无法购买\n\n- 恢复购买\n\n如果您重新安装了App，您可以恢复[一月期会员] 或者 [一年期会员] 或者 [永久会员]，请在购买界面点击 '恢复购买'，如果您之前没有购买过会员，将会提示购买失败。您之前购买的 [能量] 无法被恢复，请妥善保管您的数据\n\n- 取消订阅\n\n如果您想取消订阅，在下次自动续费24小时之前，您可以在系统订阅管理中取消订阅，则下次不会扣费续订。如果在24小时内取消订阅，由于自动续订服务由Apple提供，我们无法保证您能成功退订\n\n- 退款\n\n如果您对我们的服务不满意，您可以尝试在Apple申请退款，退款成功后，您的高级会员服务将不会被保留，如果您在成功扣费后没有自动更新为高级会员，您可以发送邮件联系我们 liuzimingjay@gmail.com 我们会尽快协助您解决\n\n"; ObjectID = "dnb-hB-YOr"; */
-"dnb-hB-YOr.text" = "用户隐私政策\n\n[极简自律] 关注并且尊重用户隐私，我们不会以任何方式收集您的个人数据，包括您的个人信息，使用记录，使用偏好，您在本地产生的数据将储存在您的设备。如果您删除习惯项目，项目相关数据将会在本地被删除，且无法恢复。如果您卸载App，所有数据将会被删除，且无法被恢复。\n\n用户使用条款\n\n[极简自律] 提供多种App内购方案，当您选择购买即视为您同意本条款\n\n- 会员服务\n\n[一月期会员] 和 [一年期会员] 属于自动订阅型会员，服务到期后将自动续费。[永久会员] 属于非消费型会员，您只能购买一次，且不会被自动续费。[能量] 属于消费型内购，您可以重复购买，且不会被自动续费。当您取消订阅或者申请了退款，所有的会员服务将会被锁定，但是您的项目数据不会被删除，当您恢复会员后，您可以重新享受会员服务\n\n- 购买规则\n\n当您订阅了 [一月期会员] 您可以升级到 [一年期会员]，Apple会按差价进行扣款，并且更新订阅期限。\n\n为了防止重复扣费，如果您订阅了 [一月期会员] 或 [一年期会员]，再您取消订阅前，您将暂时无法购买 [永久会员]。如果您购买了 [永久会员]，[一月期会员] 和 [一年期会员] 将无法购买\n\n- 恢复购买\n\n如果您重新安装了App，您可以恢复[一月期会员] 或者 [一年期会员] 或者 [永久会员]，请在购买界面点击 '恢复购买'，如果您之前没有购买过会员，将会提示购买失败。您之前购买的 [能量] 无法被恢复，请妥善保管您的数据\n\n- 取消订阅\n\n如果您想取消订阅，在下次自动续费24小时之前，您可以在系统订阅管理中取消订阅，则下次不会扣费续订。如果在24小时内取消订阅，由于自动续订服务由Apple提供，我们无法保证您能成功退订\n\n- 退款\n\n如果您对我们的服务不满意，您可以尝试在Apple申请退款，退款成功后，您的高级会员服务将不会被保留，如果您在成功扣费后没有自动更新为高级会员，您可以发送邮件联系我们 liuzimingjay@gmail.com 我们会尽快协助您解决\n\n";
+"dnb-hB-YOr.text" = "用户隐私政策\n\n[极简自律] 关注并且尊重用户隐私，我们不会以任何方式收集您的个人数据，包括您的个人信息，使用记录，使用偏好，您在本地产生的数据将储存在您的设备。如果您删除习惯项目，项目相关数据将会在本地被删除，且无法恢复。如果您卸载App，所有数据将会被删除，且无法被恢复。\n\n用户使用条款\n\n[极简自律] 提供多种App内购方案，当您选择购买即视为您同意本条款\n\n- 会员服务\n\n[一月期会员] 和 [一年期会员] 属于自动订阅型会员，服务到期后将自动续费。[永久会员] 属于非消费型会员，您只能购买一次，且不会被自动续费。[能量] 属于消费型内购，您可以重复购买，且不会被自动续费。当您取消订阅或者申请了退款，所有的会员服务将会被锁定，但是您的项目数据不会被删除，当您恢复会员后，您可以重新享受会员服务\n\n- 购买规则\n\n当您订阅了 [一月期会员] 您可以升级到 [一年期会员]，Apple会在当前订阅日期结束后开始新的订阅方案。\n\n为了防止重复扣费，如果您订阅了 [一月期会员] 或 [一年期会员]的情况下，如果您想升级永久会员方案，请在升级后不要忘记取消现在订阅。如果您购买了 [永久会员]，请勿重复订阅 [一月期会员] 或 [一年期会员]\n\n- 恢复购买\n\n如果您重新安装了App，您可以恢复[一月期会员] 或者 [一年期会员] 或者 [永久会员]，请在购买界面点击 '恢复购买'，如果您之前没有购买过会员，将会提示购买失败。您之前购买的 [能量] 无法被恢复，请妥善保管您的数据\n\n- 取消订阅\n\n如果您想取消订阅，在下次自动续费24小时之前，您可以在系统订阅管理中取消订阅，则下次不会扣费续订。如果在24小时内取消订阅，由于自动续订服务由Apple提供，我们无法保证您能成功退订\n\n- 退款\n\n如果您对我们的服务不满意，您可以尝试在Apple申请退款，退款成功后，您的高级会员服务将不会被保留，如果您在成功扣费后没有自动更新为高级会员，您可以发送邮件联系我们 liuzimingjay@gmail.com 我们会尽快协助您解决\n\n";
 
 /* Class = "UILabel"; text = "打卡记录分享"; ObjectID = "doh-fb-7dN"; */
 "doh-fb-7dN.text" = "打卡记录分享";
@@ -375,7 +375,7 @@
 "fbt-uz-jUB.text" = "三";
 
 /* Class = "UILabel"; text = "一年期会员"; ObjectID = "fdJ-9I-Sz3"; */
-"fdJ-9I-Sz3.text" = "一年期会员";
+"fdJ-9I-Sz3.text" = "一年期方案";
 
 /* Class = "UILabel"; text = "能效： 连续打卡21天  获得 1点能量 (普通用户)"; ObjectID = "fkb-6A-26B"; */
 "fkb-6A-26B.text" = "能效： 连续打卡21天  获得 1点能量 (普通用户)";
@@ -447,7 +447,7 @@
 "mKJ-bi-X7L.text" = "后续全部VIP功能";
 
 /* Class = "UILabel"; text = "永久会员"; ObjectID = "mR3-cQ-fjn"; */
-"mR3-cQ-fjn.text" = "永久会员";
+"mR3-cQ-fjn.text" = "永久方案";
 
 /* Class = "UIBarButtonItem"; title = "添加"; ObjectID = "mbP-lN-Cmn"; */
 "mbP-lN-Cmn.title" = "添加";
